Fix spacing in the 'How It Works' page
Next Step: Add the thumbnails

--- a/css/index.css
+++ b/css/index.css
@@ -42,7 +42,8 @@ a {
 }
 
 .update {
-  margin-top: -100px;
+  margin-top: -320px;
+  margin-right: -30px;
 }
 
 .heading-5 {
@@ -359,6 +360,7 @@ blockquote {
 
 .part-1 {
   text-align: center;
+  width: 980px;
 }
 
 .menu {
@@ -715,6 +717,8 @@ blockquote {
   flex-basis: 40%;
   background-color: #fff;
   margin-bottom: 30px;
+  /*max-width: 500px;*/
+  height: 270px;
 }
 
 .div-block-17 {
@@ -965,6 +969,22 @@ blockquote {
 .heading-2 {
   overflow: hidden;
   max-height: 88px;
+}
+
+.hiw {
+  width: 340px;
+  margin-right: 50px;
+  /*margin-top: -20px;*/
+}
+
+.hiwh3 {
+  margin-left: 100px;
+  margin-top: -30px;
+}
+
+.left {
+  margin-left: -30px;
+  margin-top: 100px;
 }
 
 .div-block-32 {
